
-------------------------------------------------------------------------------

Fri Oct  1 10:50:59 PDT 1999
(Raster)

fixed minor pager sel windo resize problem...

-------------------------------------------------------------------------------

Fri Oct  1 11:08:10 PDT 1999
(Mandrake)

fixed the bug where remembering any state BESIDES location on a dialog window
would cause it to pop up at -20, -20

-------------------------------------------------------------------------------

Fri Oct  1 11:09:35 PDT 1999
(Raster)

patch for label in settings dialog

-------------------------------------------------------------------------------

Fri Oct  1 12:10:25 PDT 1999
(Raster)

new mantinence submenu form deksktop menu

-------------------------------------------------------------------------------

Fri Oct  1 12:52:19 PDT 1999
(Mandrake)

fixed the bug in dox, removed from TODO list.

-------------------------------------------------------------------------------

Fri Oct  1 13:35:50 PDT 1999
(Mandrake)

wrote some code for "first time initialization" cruft.
should generate the user menus in ~/.enlightenment, as well as run dox for the
first time.

-------------------------------------------------------------------------------

Fri Oct  1 15:08:47 PDT 1999
(Raster)

reload_menus segv fixed :)

-------------------------------------------------------------------------------

Fri Oct  1 15:44:09 PDT 1999
(Raster)

move abotu logo to left sit of about box

-------------------------------------------------------------------------------

Fri Oct  1 16:17:41 PDT 1999
(Mandrake)

I can't reproduce the transparency issue bug.


-------------------------------------------------------------------------------

Fri Oct  1 16:19:08 PDT 1999
(Raster)

commit updated TODO

-------------------------------------------------------------------------------

Fri Oct  1 17:01:44 PDT 1999
(Mandrake)

let us place dialog boxes arranged like the rest of the windows in the world