@@ -2696,3 +2696,11 @@ Fri Oct  1 17:01:44 PDT 1999
 (Mandrake)
 
 let us place dialog boxes arranged like the rest of the windows in the world
+
+-------------------------------------------------------------------------------
+
+Fri Oct  1 17:11:42 PDT 1999
+(Mandrake)
+
+trying to make that about box look a bit more clean.  also took out the
+"USE AT YOUR OWN RISK" since we're getting prepped for a release
